[tool.poetry]
name = "ssr"
version = "0.1.0"
description = ""
authors = ["tenjo-t <tenjo0314takashi@gmail.com>"]
readme = "README.md"
packages = [
  {include = "ssr"}
]

[tool.poetry.dependencies]
python = "^3.11"
pyvisa = "^1.13.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
